kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress

spec:
  rules:
    - host: prajwal.infinityfreeapp.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name:  fastapi-service
                port:
                  number: 80
